--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/platform-express": "^9.4.2",
     "@nestjs/swagger": "^7.0.3",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/nodemailer": "^6.4.15",
+    "aws-sdk": "^2.1635.0",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.2",
     "cache-manager-ioredis": "^2.1.0",
@@ -37,6 +39,8 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "ioredis": "^5.3.2",
+    "mailtrap": "^3.3.0",
+    "nestjs-paginate": "^8.1.3",
     "nestjs-redis": "^1.3.3",
     "node-mailjet": "^6.0.4",
     "pg": "^8.11.0",
@@ -52,6 +56,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/multer": "^1.4.11",
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
