--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.24.0",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
@@ -30,7 +31,6 @@
     "@nestjs/platform-express": "^9.4.2",
     "@nestjs/swagger": "^7.0.3",
     "@nestjs/typeorm": "^9.0.1",
-    "@types/nodemailer": "^6.4.15",
     "aws-sdk": "^2.1635.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.0",
@@ -41,9 +41,12 @@
     "cors": "^2.8.5",
     "ioredis": "^5.3.2",
     "mailtrap": "^3.3.0",
+    "mime-types": "^2.1.35",
+    "morgan": "^1.10.0",
     "nestjs-paginate": "^8.1.3",
     "nestjs-redis": "^1.3.3",
     "node-mailjet": "^6.0.4",
+    "nodemailer": "^6.9.14",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -57,8 +60,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.11",
     "@types/node": "18.16.12",
+    "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
