--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^9.4.2",
     "@nestjs/swagger": "^7.0.3",
     "@nestjs/typeorm": "^9.0.1",
+    "@redis/client": "^1.6.0",
     "aws-sdk": "^2.1635.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.0",
@@ -48,6 +49,7 @@
     "node-mailjet": "^6.0.4",
     "nodemailer": "^6.9.14",
     "pg": "^8.11.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.6.3",
