--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
           "mailjet",
           "nestjs",
           "Olusola",
+          "requst",
           "secondss",
+          "Serivce",
           "typeorm",
           "updatesubcategory",
           "uuidv"
