--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/core": "^9.4.2",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^9.4.2",
     "@nestjs/platform-socket.io": "^10.3.10",
     "@nestjs/swagger": "^7.0.3",
@@ -48,6 +49,7 @@
     "ioredis": "^5.3.2",
     "mailtrap": "^3.3.0",
     "mime-types": "^2.1.35",
+    "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "nestjs-paginate": "^8.1.3",
     "nestjs-redis": "^1.3.3",
