--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
      "cSpell.words": [
           "Hydrogenpay",
+          "HYDROGRENPAY",
           "liaoliaots",
           "mailjet",
           "nestjs",
           "Olusola",
+          "paystack",
           "requst",
           "secondss",
           "Serivce",
