--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^9.4.2",
     "@nestjs/platform-socket.io": "^10.3.10",
+    "@nestjs/schedule": "^4.1.0",
     "@nestjs/swagger": "^7.0.3",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^10.3.10",
