--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
           "liaoliaots",
           "mailjet",
           "nestjs",
+          "Ofstock",
           "Olusola",
           "paystack",
           "requst",
