--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
      "cSpell.words": [
+          "Dropshippingstatistic",
+          "fropshipping",
           "Hydrogenpay",
           "HYDROGRENPAY",
           "liaoliaots",
