--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
      "cSpell.words": [
+          "cnsdemoapiacct",
           "Dropshippingstatistic",
           "fropshipping",
           "Hydrogenpay",
@@ -9,6 +10,7 @@
           "nestjs",
           "Ofstock",
           "Olusola",
+          "Onforwarding",
           "paystack",
           "requst",
           "secondss",
