--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
           "liaoliaots",
           "mailjet",
           "nestjs",
+          "NIPOST",
           "Ofstock",
           "Olusola",
           "Onforwarding",
