--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
           "Olusola",
           "Onforwarding",
           "paystack",
+          "REDSTAR",
           "requst",
           "secondss",
           "Serivce",
