--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
-  "version": 2,
-  "builds": [{ "src": "./main.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "builds": [
+    {
+      "src": "dist/main.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/main.js"
+    }
+  ]
 }
